Update and rename r6 to rainbow.html

--- a/rainbow.html
+++ b/rainbow.html
@@ -2,13 +2,23 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
-        <title>Rainbow Six</title>
+        <title>rainbow six</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="cs.html">CS:GO</a></li>
+                <li><a href="valorant.html">VALORANT</a></li>
+                <li><a href="rainbowsix.html">Rainbow Six</a></li>
+                <li><a href="minecraft.html">Minecraft</a></li>
+            </ul>
+        </nav>
         <header class="cabecalho">
             <h1>Tom Clancy's Rainbow Six Siege</h1>
         </header>
+   
         <div class="conteudo">
             <p>Tom Clancy's Rainbow Six Siege é um jogo de tiro tático lançado em 2015 pela Ubisoft. No jogo, equipes de operadores de forças especiais competem em ambientes fechados para completar objetivos como desarmar bombas ou resgatar reféns. Com ênfase em estratégia, trabalho em equipe e destruição ambiental, Rainbow Six Siege é conhecido por sua abordagem realista e tática, além de ter uma cena competitiva ativa.</p>
         </div>
@@ -25,7 +35,7 @@
         </section>
         <section>
             <article>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-QP98HZzEEY?si=IuBfGdYFsdGyrcyP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                
             </article>
         </section>
         <section>
