--- a/valorant.html
+++ b/valorant.html
@@ -5,6 +5,15 @@
         <title>valorant</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <nav class="menu">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="cs.html">CS:GO</a></li>
+            <li><a href="valorant.html">VALORANT</a></li>
+            <li><a href="rainbowsix.html">Rainbow Six</a></li>
+            <li><a href="minecraft.html">Minecraft</a></li>
+        </ul>
+    </nav>
     <body>
         <header class="cabecalho">
             <h1>VALORANT</h1>
