--- a/cs.html
+++ b/cs.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"> 
         <title>CS:GO</title>  
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="cs.html">CS:GO</a></li>
+                <li><a href="valorant.html">VALORANT</a></li>
+                <li><a href="rainbowsix.html">Rainbow Six</a></li>
+                <li><a href="minecraft.html">Minecraft</a></li>
+            </ul>
+        </nav>
         <header class="cabecalho">
-            <h1>Counter-Strike:Global Offensive (CS:GO)</h1>
+            <h1> Counter-Strike:Global Offensive (CS:GO)</h1>
         </header>
+   
     <div class="detalhes">
         <p>Counter-Strike: Global Offensive (CS:GO) é um jogo de tiro tático lançado em 2012 pela Valve e Hidden Path Entertainment. No jogo, equipes de terroristas e antiterroristas competem para completar objetivos, como plantar ou desarmar uma bomba, ou eliminar o time adversário. Famoso por sua ênfase em estratégia, precisão e trabalho em equipe, CS:GO se tornou um dos maiores jogos de eSports, com uma vasta base de jogadores e torneios de alto nível.</p>
     </div>
