--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
-    <title>the best plays</title>
+    <title>Highlights</title>
     <link rel="stylesheet" href="style.css">
   </head>  
   <body> 
     <header class="cabecalho">
-        <h1>hihglights by maiSpy</h1>
+        <h1><span style="color: rgb(124, 6, 6);">Highlights by maiSpy</span></h1>
     </header>
+
 <nav class="menu">
      <ul>
        <li><a href="cs.html">CS:GO</a></li>
@@ -49,7 +50,7 @@
         <article> 
 
         <h2>Minecraft</h2>
-        <p>redencao</p>
+        <p>redanção</span> </p>
 
         </article>
     </section>
