--- a/index.html
+++ b/index.html
@@ -50,16 +50,10 @@
         <article> 
 
         <h2>Minecraft</h2>
-        <p>redanção</span> </p>
+        <p>redanção</p>
 
         </article>
     </section>
-
-    <section>
-        <article>
-        </article>
-    </section>
-
 
 </main>
 
